Added readability comments and updated ReadMe

--- a/my-chrome-extension/index.html
+++ b/my-chrome-extension/index.html
@@ -10,3 +10,11 @@
     <script type="module" src="./src/popup/index.tsx"></script>
   </body>
 </html>
+
+<!-- 
+  The script tag with type="module" is used to load JavaScript modules. 
+  Modules are a way to organize and reuse code by splitting it into separate files. 
+  When type="module" is specified, the browser treats the script as an ES module, which allows you to use import and export statements to include other modules.
+
+  In this case, the script tag is loading the entry point for the React application located at "./src/popup/index.tsx". This file initializes the React app and renders it into the <div id="root"></div> element in the HTML.
+-->
